Update footer with author info

--- a/index.html
+++ b/index.html
@@ -77,7 +77,6 @@
       <div class="features">
         <div class="feature">&#x2713; No login required</div>
         <div class="feature">&#x2713; 100% private</div>
-        <div class="feature">&#x2713; Works offline</div>
         <div class="feature">&#x2713; Mobile friendly</div>
       </div>
     </header>
@@ -266,9 +265,9 @@
     </section>
 
     <footer>
-      <p>Built with React. No data leaves your browser.</p>
+      <p>This is 100% vibe coded just for fun by Mary Kate Stimmler (using Claude Cowork + Github) and is a work in progress.</p>
       <p style="margin-top: 0.5rem;">
-        <a href="https://github.com/marykatestimmler-dev/hrapps" target="_blank">View on GitHub</a>
+        To follow my progress, follow me on <a href="https://www.linkedin.com/in/marykatestimmler/" target="_blank">LinkedIn</a>
       </p>
     </footer>
   </div>
