Move author credit to top of page

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 <body>
   <div class="container">
     <header>
+      <p style="color: #a5b4fc; margin-bottom: 1.5rem;">This is 100% vibe coded just for fun by Mary Kate Stimmler (using Claude Cowork + Github) and is a work in progress. To follow my progress, follow me on <a href="https://www.linkedin.com/in/marykatestimmler/" target="_blank" style="color: #6ee7b7;">LinkedIn</a></p>
       <div class="badge">&#x1F3AF; 20 Research-Based Tools</div>
       <h1>HR Apps Collection</h1>
       <p class="subtitle">Interactive workplace tools grounded in organizational psychology, behavioral economics, and I/O research. Free, private, and runs entirely in your browser.</p>
@@ -265,10 +266,6 @@
     </section>
 
     <footer>
-      <p>This is 100% vibe coded just for fun by Mary Kate Stimmler (using Claude Cowork + Github) and is a work in progress.</p>
-      <p style="margin-top: 0.5rem;">
-        To follow my progress, follow me on <a href="https://www.linkedin.com/in/marykatestimmler/" target="_blank">LinkedIn</a>
-      </p>
     </footer>
   </div>
 </body>
