Update intro text styling

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <header>
       <div style="display: flex; align-items: center; justify-content: center; gap: 1rem; margin-bottom: 1.5rem;">
         <img src="avatar.svg" alt="Mary Kate Stimmler" style="width: 60px; height: 60px; border-radius: 50%; border: 2px solid #6366f1;">
-        <p style="color: #a5b4fc; text-align: left;">This is 100% vibe coded just for fun by Mary Kate Stimmler (using Claude Cowork + Github) and is a work in progress. To follow my progress, follow me on <a href="https://www.linkedin.com/in/marykatestimmler/" target="_blank" style="color: #6ee7b7;">LinkedIn</a></p>
+        <p style="color: #a5b4fc; text-align: left; font-size: 1.1rem;">This is 100% vibe coded just for fun by Mary Kate Stimmler (using Claude Cowork + Github) and is a work in progress.<br><br>To follow my progress, follow me on <a href="https://www.linkedin.com/in/marykatestimmler/" target="_blank" style="color: #6ee7b7;">LinkedIn</a></p>
       </div>
       <div class="badge">&#x1F3AF; 20 Research-Based Tools</div>
       <h1>HR Apps Collection</h1>
