Update Manager Assessment to only reference Project Oxygen

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
           <div class="tool-number">18</div>
           <h3 class="tool-title">Manager Effectiveness Self-Assessment</h3>
           <p class="tool-description">15-question assessment with radar chart results and development priorities.</p>
-          <span class="tool-research">Project Oxygen & Gallup Q12</span>
+          <span class="tool-research">Google's Project Oxygen</span>
         </a>
       </div>
     </section>
