--- a/apps/18-manager-effectiveness-assessment.html
+++ b/apps/18-manager-effectiveness-assessment.html
@@ -21,7 +21,7 @@
     const { useState, useMemo } = React;
 
     // Manager Effectiveness Self-Assessment
-    // Based on Google's Project Oxygen and Gallup's Q12 Research
+    // Based on Google's Project Oxygen Research
     const ManagerEffectivenessAssessment = () => {
       const [currentSection, setCurrentSection] = useState(0);
       const [responses, setResponses] = useState({});
@@ -50,7 +50,7 @@
           name: 'Creates Inclusive Environment',
           icon: '\uD83E\uDD1D',
           description: 'Creates an inclusive team environment showing concern for success and well-being',
-          research: 'Project Oxygen #3 & Gallup Q5',
+          research: 'Project Oxygen #3',
           color: '#ec4899'
         },
         {
@@ -66,7 +66,7 @@
           name: 'Good Communicator',
           icon: '\uD83D\uDCAC',
           description: 'Is a good communicator who listens and shares information',
-          research: 'Project Oxygen #5 & Gallup Q2',
+          research: 'Project Oxygen #5',
           color: '#14b8a6'
         },
         {
@@ -74,7 +74,7 @@
           name: 'Career Development',
           icon: '\uD83D\uDCC8',
           description: 'Supports career development and discusses progress',
-          research: 'Project Oxygen #6 & Gallup Q6, Q11',
+          research: 'Project Oxygen #6',
           color: '#8b5cf6'
         },
         {
@@ -82,7 +82,7 @@
           name: 'Clear Vision & Strategy',
           icon: '\uD83D\uDD2D',
           description: 'Has a clear vision and strategy for the team',
-          research: 'Project Oxygen #7 & Gallup Q8',
+          research: 'Project Oxygen #7',
           color: '#0ea5e9'
         },
         {
@@ -485,7 +485,7 @@
                 Manager Effectiveness Self-Assessment
               </h1>
               <p style={{ color: '#94a3b8', fontSize: '16px', maxWidth: '600px', margin: '0 auto' }}>
-                Based on Google's Project Oxygen research and Gallup's Q12 employee engagement framework
+                Based on Google's Project Oxygen research
               </p>
             </div>
 
@@ -967,33 +967,18 @@
                   <h3 style={{ fontSize: '16px', fontWeight: '600', marginBottom: '16px', color: '#94a3b8' }}>
                     {'\uD83D\uDCDA'} Research Foundation
                   </h3>
-                  <div style={{ display: 'grid', gap: '16px', gridTemplateColumns: 'repeat(auto-fit, minmax(280px, 1fr))' }}>
-                    <div style={{
-                      padding: '16px',
-                      background: 'rgba(15, 23, 42, 0.5)',
-                      borderRadius: '10px',
-                      border: '1px solid rgba(71, 85, 105, 0.3)'
-                    }}>
-                      <div style={{ color: '#818cf8', fontWeight: '600', marginBottom: '8px' }}>
-                        Google's Project Oxygen
-                      </div>
-                      <p style={{ color: '#94a3b8', fontSize: '13px', lineHeight: '1.5' }}>
-                        A multi-year research initiative analyzing data from employee surveys, performance reviews, and interviews to identify the 8 behaviors of Google's best managers.
-                      </p>
+                  <div style={{
+                    padding: '16px',
+                    background: 'rgba(15, 23, 42, 0.5)',
+                    borderRadius: '10px',
+                    border: '1px solid rgba(71, 85, 105, 0.3)'
+                  }}>
+                    <div style={{ color: '#818cf8', fontWeight: '600', marginBottom: '8px' }}>
+                      Google's Project Oxygen
                     </div>
-                    <div style={{
-                      padding: '16px',
-                      background: 'rgba(15, 23, 42, 0.5)',
-                      borderRadius: '10px',
-                      border: '1px solid rgba(71, 85, 105, 0.3)'
-                    }}>
-                      <div style={{ color: '#8b5cf6', fontWeight: '600', marginBottom: '8px' }}>
-                        Gallup's Q12 Framework
-                      </div>
-                      <p style={{ color: '#94a3b8', fontSize: '13px', lineHeight: '1.5' }}>
-                        Based on extensive meta-analysis of millions of employee surveys, the Q12 identifies 12 elements that strongly correlate with employee engagement and performance.
-                      </p>
-                    </div>
+                    <p style={{ color: '#94a3b8', fontSize: '13px', lineHeight: '1.5' }}>
+                      A multi-year research initiative analyzing data from employee surveys, performance reviews, and interviews to identify the 8 behaviors of Google's best managers.
+                    </p>
                   </div>
                 </div>
 
