--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
 <body>
   <div class="container">
     <header>
+      <h1 style="font-size: 3.5rem; margin-bottom: 0.5rem;">Welcome to Promptletariat.com</h1>
+      <p style="color: #a5b4fc; font-size: 1.25rem; font-style: italic; margin-bottom: 1.5rem;">The point is to prompt it.</p>
       <div style="display: flex; align-items: center; justify-content: center; gap: 1rem; margin-bottom: 1.5rem;">
         <img src="avatar.svg" alt="Mary Kate Stimmler" style="width: 60px; height: 60px; border-radius: 50%; border: 2px solid #6366f1;">
         <p style="color: #a5b4fc; text-align: left; font-size: 1.1rem;">This is 100% vibe coded just for fun by Mary Kate Stimmler (using Claude Cowork + Github) and is a work in progress.<br><br>To follow my progress, follow me on <a href="https://www.linkedin.com/in/marykatestimmler/" target="_blank" style="color: #6ee7b7;">LinkedIn</a></p>
