--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     .brand-label {
       font-family: 'Syne', sans-serif;
-      font-size: clamp(2rem, 8vw, 3.5rem);
+      font-size: clamp(1.5rem, 7vw, 3.5rem);
       font-weight: 800;
       letter-spacing: -1px;
       text-transform: uppercase;
@@ -60,7 +60,8 @@
       -webkit-text-fill-color: transparent;
       background-clip: text;
       margin-bottom: 1rem;
-      white-space: nowrap;
+      word-break: break-word;
+      overflow-wrap: break-word;
     }
 
     .main-title {
