--- a/index.html
+++ b/index.html
@@ -195,6 +195,32 @@
       font-size: 0.5rem;
     }
 
+    .category-list {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 0.75rem;
+      margin-top: 2rem;
+      max-width: 700px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .category-chip {
+      font-family: 'Space Grotesk', sans-serif;
+      font-size: 0.8rem;
+      font-weight: 500;
+      color: #fff;
+      background: rgba(255,255,255,0.05);
+      border: 1px solid rgba(255,255,255,0.1);
+      padding: 0.5rem 1rem;
+      border-radius: 2rem;
+      transition: all 0.2s ease;
+    }
+    .category-chip:hover {
+      background: rgba(255,46,99,0.15);
+      border-color: rgba(255,46,99,0.3);
+    }
+
     .category { margin-bottom: 3rem; }
     .category-header {
       display: flex;
@@ -304,6 +330,7 @@
     <header>
       <h1 class="brand-label">Promptletariat</h1>
       <p class="tagline">Vibe-coded HR apps that explore what's possible for the modern worker</p>
+      <p class="tagline">Untested and unserious. For exploration purposes only. Use with caution.</p>
       <img src="header-image.png" alt="Promptletariat" class="header-image">
       <p class="subtitle-tagline">Built with <span>Claude</span> + <span>Github</span> + <span>Squarespace</span> (Domain/hosting) + <span>Canva/Nano Banana</span> (images)</p>
       <p class="intro-text">
@@ -317,6 +344,16 @@
         <div class="feature">No login</div>
         <div class="feature">100% private</div>
         <div class="feature">Mobile ready</div>
+      </div>
+
+      <div class="category-list">
+        <div class="category-chip">&#x1F9ED; Assessment & Self-Discovery</div>
+        <div class="category-chip">&#x2696; Decision Support</div>
+        <div class="category-chip">&#x1F465; Hiring & Talent</div>
+        <div class="category-chip">&#x1F4CA; Culture & Engagement</div>
+        <div class="category-chip">&#x1F5FA; Data Visualization</div>
+        <div class="category-chip">&#x1F4DA; Learning & Development</div>
+        <div class="category-chip">&#x1F52C; Research Translation</div>
       </div>
     </header>
 
