--- a/index.html
+++ b/index.html
@@ -348,6 +348,75 @@
       letter-spacing: 0.3px;
     }
 
+    .new-release {
+      background: linear-gradient(135deg, rgba(255,46,99,0.15) 0%, rgba(8,217,214,0.15) 100%);
+      border: 2px solid #ff2e63;
+      border-radius: 16px;
+      padding: 1.5rem 2rem;
+      margin: 2rem auto;
+      max-width: 600px;
+      text-align: center;
+      position: relative;
+      overflow: hidden;
+    }
+    .new-release::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: -100%;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(90deg, transparent, rgba(255,255,255,0.1), transparent);
+      animation: shimmer 3s infinite;
+    }
+    @keyframes shimmer {
+      0% { left: -100%; }
+      100% { left: 100%; }
+    }
+    .new-release-label {
+      font-family: 'Space Grotesk', sans-serif;
+      font-size: 0.75rem;
+      font-weight: 700;
+      letter-spacing: 2px;
+      text-transform: uppercase;
+      color: #ff2e63;
+      margin-bottom: 0.5rem;
+      display: inline-block;
+      background: rgba(255,46,99,0.2);
+      padding: 0.25rem 0.75rem;
+      border-radius: 4px;
+    }
+    .new-release-title {
+      font-family: 'Syne', sans-serif;
+      font-size: 1.4rem;
+      font-weight: 700;
+      color: #fff;
+      margin-bottom: 0.5rem;
+    }
+    .new-release-desc {
+      font-family: 'Inter', sans-serif;
+      font-size: 0.9rem;
+      color: #a0a0a0;
+      margin-bottom: 1rem;
+      line-height: 1.6;
+    }
+    .new-release-link {
+      display: inline-block;
+      font-family: 'Space Grotesk', sans-serif;
+      font-size: 0.9rem;
+      font-weight: 600;
+      color: #0d0d0d;
+      background: linear-gradient(135deg, #c8ff00, #08d9d6);
+      padding: 0.6rem 1.5rem;
+      border-radius: 2rem;
+      text-decoration: none;
+      transition: all 0.2s ease;
+    }
+    .new-release-link:hover {
+      transform: scale(1.05);
+      box-shadow: 0 4px 20px rgba(200,255,0,0.4);
+    }
+
     footer {
       text-align: center;
       padding: 3rem 0;
@@ -387,6 +456,14 @@
         A personal experiment by Mary Kate Stimmler exploring what's possible when you prompt with purpose, but no knowledge of code. Work in progress, always evolving.<br><br>
         To watch the (r)evolution of this site, <a href="https://www.linkedin.com/in/marykatestimmler/" target="_blank" class="linkedin-link">follow me on LinkedIn</a>
       </p>
+
+      <div class="new-release">
+        <span class="new-release-label">✨ New Release</span>
+        <h3 class="new-release-title">The App for Making Apps</h3>
+        <p class="new-release-desc">Makes workplace assessment apps based on your needs and validated social science scales.</p>
+        <a href="https://builder.promptletariat.com" target="_blank" class="new-release-link">Try It Now →</a>
+      </div>
+
       <div class="badge">20 Research-Based Tools</div>
       <h2 class="section-title">The Collection</h2>
       <p class="subtitle">Interactive workplace tools grounded in I/O psychology and behavioral science. Free, private, browser-based.</p>
