Reorder tools list

--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
       </div>
 
       <img src="header-image.png" alt="Promptletariat" class="header-image">
-      <p class="subtitle-tagline">Built with <span>Claude</span> + <span>Github</span> + <span>Squarespace</span> (Domain/hosting) + <span>Canva/Nano Banana</span> (images)</p>
+      <p class="subtitle-tagline">Built with <span>Claude</span> + <span>Gemini</span> + <span>Github</span> + <span>Squarespace</span> (Domain/hosting) + <span>Vercel</span> + <span>Canva/Nano Banana</span> (images)</p>
       <p class="intro-text">
         A personal experiment by Mary Kate Stimmler exploring what's possible when you prompt with purpose, but no knowledge of code. Work in progress, always evolving.<br><br>
         To watch the (r)evolution of this site, <a href="https://www.linkedin.com/in/marykatestimmler/" target="_blank" class="linkedin-link">follow me on LinkedIn</a>
